--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,7 @@
     "О сайте": "About us",
     "Главная страница": "Main page",
     "Язык": "English",
-    "Страница не найдена": "Page not found"
+    "Страница не найдена": "Page not found",
+    "Неизвестная ошибка": "Unknown error",
+    "Обновить страницу": "Refresh page"
 }
