--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,7 @@
     "Перевод": "Перевод",
     "О сайте": "О сайте",
     "Главная страница": "Главная страница",
-    "Страница не найдена": "Страница не найдена"
+    "Страница не найдена": "Страница не найдена",
+    "Неизвестная ошибка":"Произошла неизвестная ошибка",
+    "Обновить страницу":"Обновить страницу"
 }
