feat: added tests with react-testing-library

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
     "Главная страница": "Главная страница",
     "Страница не найдена": "Страница не найдена",
     "Неизвестная ошибка":"Произошла неизвестная ошибка",
-    "Обновить страницу":"Обновить страницу"
+    "Обновить страницу":"Обновить страницу",
+    "Открыть/закрыть меню": "Toggle"
 }
