--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
     "Язык": "English",
     "Страница не найдена": "Page not found",
     "Неизвестная ошибка": "Unknown error",
-    "Обновить страницу": "Refresh page"
+    "Обновить страницу": "Refresh page",
+    "Открыть/закрыть меню": "Toggle"
 }
