--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,7 @@
 {
     "Перевод": "Перевод",
     "О сайте": "О сайте",
-    "Главная страница": "Главная страница",
+    "Главная страница": "Главная",
     "Страница не найдена": "Страница не найдена",
     "Неизвестная ошибка":"Произошла неизвестная ошибка",
     "Обновить страницу":"Обновить страницу",
