feat: upgrade sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,8 +1,9 @@
 {
     "Перевод": "Translate",
     "О сайте": "About us",
-    "Главная страница": "Main page",
+    "Главная страница": "Main",
     "Язык": "English",
+    "Короткий язык": "En",
     "Страница не найдена": "Page not found",
     "Неизвестная ошибка": "Unknown error",
     "Обновить страницу": "Refresh page",
