feat: added Portal, Modal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,6 @@
     "Страница не найдена": "Page not found",
     "Неизвестная ошибка": "Unknown error",
     "Обновить страницу": "Refresh page",
-    "Открыть/закрыть меню": "Toggle"
+    "Открыть/закрыть меню": "Toggle",
+    "Войти": "Sign In"
 }
