--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,7 @@
     "Страница не найдена": "Страница не найдена",
     "Неизвестная ошибка":"Произошла неизвестная ошибка",
     "Обновить страницу":"Обновить страницу",
-    "Открыть/закрыть меню": "Toggle"
+    "Открыть/закрыть меню": "Toggle",
+    "Войти": "Войти"
+
 }
