feat: added Counter with tests

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,7 @@
     "Неизвестная ошибка": "Unknown error",
     "Обновить страницу": "Refresh page",
     "Открыть/закрыть меню": "Toggle",
-    "Войти": "Sign In"
+    "Войти": "Sign In",
+    "Decrement": "Decrement",
+    "Increment": "Increment"
 }
