--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,6 +8,8 @@
     "Неизвестная ошибка":"Произошла неизвестная ошибка",
     "Обновить страницу":"Обновить страницу",
     "Открыть/закрыть меню": "Toggle",
-    "Войти": "Войти"
+    "Войти": "Войти",
+    "Decrement": "Decrement",
+    "Increment": "Increment"
 
 }
