feat: added new input, login form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,7 @@
     "Открыть/закрыть меню": "Toggle",
     "Войти": "Sign In",
     "Decrement": "Decrement",
-    "Increment": "Increment"
+    "Increment": "Increment",
+    "Введите имя": "Username",
+    "Введите пароль": "Password"
 }
