feat: added auth modal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,7 @@
     "Decrement": "Decrement",
     "Increment": "Increment",
     "Введите имя": "Username",
-    "Введите пароль": "Password"
+    "Введите пароль": "Password",
+    "Форма авторизации": "Форма авторизации",
+    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
 }
