--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,9 @@
     "Decrement": "Decrement",
     "Increment": "Increment",
     "Введите имя": "Введите имя",
-    "Введите пароль": "Введите пароль"
+    "Введите пароль": "Введите пароль",
+    "Форма авторизации": "Форма авторизации",
+    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
+
 
 }
