feat: added stories and tests

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,18 +1,27 @@
 {
+    "Тестовый пример": "Test example",
     "Перевод": "Translate",
-    "О сайте": "About us",
-    "Главная страница": "Main",
+    "Главная страница": "Main page",
     "Язык": "English",
-    "Короткий язык": "En",
+    "новый перевод": "новый перевод",
     "Страница не найдена": "Page not found",
-    "Неизвестная ошибка": "Unknown error",
-    "Обновить страницу": "Refresh page",
-    "Открыть/закрыть меню": "Toggle",
-    "Войти": "Sign In",
-    "Decrement": "Decrement",
-    "Increment": "Increment",
-    "Введите имя": "Username",
-    "Введите пароль": "Password",
-    "Форма авторизации": "Форма авторизации",
-    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
-}
+    "Произошла непредвиденная ошибка": "An unexpected error has occurred",
+    "Обновить страницу": "Reload page",
+    "throw error": "throw error",
+    "Главная": "Main",
+    "О сайте": "About us",
+    "Переключить": "Переключить",
+    "Короткий язык": "En",
+    "Войти": "Login",
+    "increment": "increment",
+    "decrement": "decrement",
+    "Введите username": "Enter username",
+    "Введите пароль": "Enter password",
+    "Форма авторизации": "Auth form",
+    "Вы ввели неверный логин или пароль": "Uncorrect username or password",
+    "Выйти": "Logout",
+    "Укажите валюту": "Choose currency",
+    "Укажите страну": "Choose country",
+    "Профиль": "Profile"
+  }
+  
