--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,20 +1,26 @@
 {
+    "Тестовый пример": "Тестовый пример",
     "Перевод": "Перевод",
-    "О сайте": "О сайте",
-    "Главная страница": "Главная",
+    "Главная страница": "Главная страница",
     "Язык": "Русский",
-    "Короткий язык": "Ru",
+    "новый перевод": "новый перевод",
     "Страница не найдена": "Страница не найдена",
-    "Неизвестная ошибка":"Произошла неизвестная ошибка",
-    "Обновить страницу":"Обновить страницу",
-    "Открыть/закрыть меню": "Toggle",
+    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+    "Обновить страницу": "Обновить страницу",
+    "throw error": "throw error",
+    "Главная": "Главная",
+    "О сайте": "О сайте",
+    "Переключить": "Переключить",
+    "Короткий язык": "Ru",
     "Войти": "Войти",
-    "Decrement": "Decrement",
-    "Increment": "Increment",
-    "Введите имя": "Введите имя",
+    "increment": "increment",
+    "decrement": "decrement",
+    "Введите username": "Введите username",
     "Введите пароль": "Введите пароль",
     "Форма авторизации": "Форма авторизации",
-    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
-
-
-}
+    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+    "Выйти": "Выйти",
+    "Укажите валюту": "Укажите валюту",
+    "Укажите страну": "Укажите страну"
+  }
+  
